# bdd_engine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conandata.yml  conanfile.txt  flake.nix  uf.py
.github/workflows/: cmakeBuildTest.yml
cmake_build/: CMakeCache.txt
scripts/: build  build_and_test.sh  run
src/: Token.h  ast.cpp  ast.h  bdd.cpp  bdd.h  colours.h  config.h  engine_exceptions.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  repl.cpp  repl.h  stmt.cpp  stmt.h  token.cpp  token.h  walker.cpp  walker.h  walker_bdd_manip.cpp  walker_bdd_substitute.cpp  walker_bdd_view.cpp  walker_sweep.cpp
tests/: benchmark_walker.cpp  interp_tester.h  parser_tester.h  test_lexer.cpp  test_main.cpp  test_parser.cpp  test_walker.cpp
